@@ -682,9 +682,10 @@ BEGIN
     EDITTEXT        IDC_PASSWORD_USERNAME,53,59,79,14,ES_AUTOHSCROLL
     LTEXT           "Password:",IDC_STATIC,7,81,34,8
     EDITTEXT        IDC_PASSWORD_PASSWORD,53,79,79,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "Show",IDC_PASSWORD_SHOW,138,79,30,14
+    PUSHBUTTON      "Show Password",IDC_PASSWORD_SHOW,138,79,82,14
     DEFPUSHBUTTON   "OK",IDOK,112,109,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,170,109,50,14
+    PUSHBUTTON      "Clear Password",IDC_PASSWORD_CLEAR,137,59,83,14
 END
 
 IDD_MEMORY DIALOGEX 0, 0, 367, 252
