@@ -289,19 +289,16 @@
 #define IDC_PASSWORD_USERNAME           1021
 #define IDC_PASSWORD_PASSWORD           1022
 #define IDC_PASSWORD_SHOW               1023
+#define IDC_PASSWORD_CLEAR              1024
 #define IDC_EDIT_ENTRIES                1025
 #define IDC_SPIN_ENTRIES                1026
 #define IDC_CONTROLLER_TEMP_0           1029
 #define IDC_CONTROLLER_TEMP_1           1030
-#define IDC_COMBO1                      1032
 #define IDC_CBO_WIFI                    1032
 #define IDC_BUTTON2                     1034
 #define IDC_BTN_PORTAL                  1034
-#define IDC_COMBO2                      1035
 #define IDC_CBO_EXP_RELAY_QTY           1035
-#define IDC_COMBO3                      1036
 #define IDC_CBO_PWMSLOPE                1036
-#define IDC_COMBO4                      1037
 #define IDC_CBO_PORTAL                  1037
 #define IDC_FEATURES_TEXT_DESCRIPTION   2001
 #define IDC_FEATURES_TREE               2002
