@@ -131,4 +131,7 @@ v1.2.0
 - Removed Temperature and Logging from Main Relay page
 - Increased size of port buttons on Main Relay page
 - Updated strings for ORP, Salinity, RF, I/O and AI modules
+- Added "Clear Password" button to wifi password window
+- Changed "Show/Hide" to "Show/Hide Password" on wifi window
+
 
